--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
+/* app.css */
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: var(--background-color);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--text-color);
 }
 
-.App-link {
-  color: #61dafb;
+.navbar {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-link, .navbar-brand {
+  color: var(--link-color) !important;
+}
+
+.mode-toggle-btn {
+  background: var(--button-background);
+  color: var(--button-color);
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.container {
+  padding: 10px;
+}
+
+button {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.accordion-button, .accordion-body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  border: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+
+/* Light Mode */
+:root {
+  --background-color: #ffffff;
+  --text-color: #000000;
+  --link-color: #ff4500;
+}
+
+/* Dark Mode */
+body.dark-mode {
+  --background-color: #181818;
+  --text-color: #ffffff;
+  --link-color: #ffa500;
 }
